@@ -143,6 +143,7 @@ version 8.0:
 - sadl demuxer
 - ADPCM THP/ADPCM NDSP encoders
 - colordetect filter
+- ffprobe -codec option
 
 
 version 7.1:
